static/css/styles.css
.nav_shell{
    position:fixed;
    width: 100%;
    left: 0;
    right: 0;
    top: 0;
    bottom: 50 px;
    display: flex;
    z-index:999;
    background-image: url("../images/bacteria_by_filterforgedotcom.jpg");
    background-size: cover;
    border-radius: 0px 0px 5px 5px;
}

.item-special{
    font-size: 24px;
    color:white !important;
    text-shadow: 1px 1px 2px black, 0 0 25px #67c0fc, 0 0 5px rgb(89, 0, 116) !important;
}

.belly_svg{
    bottom: 5px;
    right: 200px;
    width: 35px;
    background:none;
    color:white;
}

